new content for mapping/events

--- a/Resources/Prototypes/Imperial/Tiles/imperial_floors.yml
+++ b/Resources/Prototypes/Imperial/Tiles/imperial_floors.yml
@@ -2,7 +2,7 @@
 - type: tile
   id: LatticeSmall1
   name: tiles-lattice-small1
-  sprite: /Textures/Imperial/Tiles/LatticeSmall1.png
+  sprite: /Textures/Tiles/Imperial/LatticeSmall1.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -18,7 +18,7 @@
 - type: tile
   id: LatticeSmall2
   name: tiles-lattice-small2
-  sprite: /Textures/Imperial/Tiles/LatticeSmall2.png
+  sprite: /Textures/Tiles/Imperial/LatticeSmall2.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -34,7 +34,7 @@
 - type: tile
   id: LatticeSmall3
   name: tiles-lattice-small3
-  sprite: /Textures/Imperial/Tiles/LatticeSmall3.png
+  sprite: /Textures/Tiles/Imperial/LatticeSmall3.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -50,7 +50,7 @@
 - type: tile
   id: LatticeSmall4
   name: tiles-lattice-small4
-  sprite: /Textures/Imperial/Tiles/LatticeSmall4.png
+  sprite: /Textures/Tiles/Imperial/LatticeSmall4.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -66,7 +66,7 @@
 - type: tile
   id: LatticeCorner1
   name: tiles-lattice-corner1
-  sprite: /Textures/Imperial/Tiles/LatticeCorner1.png
+  sprite: /Textures/Tiles/Imperial/LatticeCorner1.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -82,7 +82,7 @@
 - type: tile
   id: LatticeCorner2
   name: tiles-lattice-corner2
-  sprite: /Textures/Imperial/Tiles/LatticeCorner2.png
+  sprite: /Textures/Tiles/Imperial/LatticeCorner2.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -98,7 +98,7 @@
 - type: tile
   id: LatticeCorner3
   name: tiles-lattice-corner3
-  sprite: /Textures/Imperial/Tiles/LatticeCorner3.png
+  sprite: /Textures/Tiles/Imperial/LatticeCorner3.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -114,7 +114,7 @@
 - type: tile
   id: LatticeCorner4
   name: tiles-lattice-corner4
-  sprite: /Textures/Imperial/Tiles/LatticeCorner4.png
+  sprite: /Textures/Tiles/Imperial/LatticeCorner4.png
   baseTurf: Space
   isSubfloor: true
   deconstructTools: [ Cutting ]
@@ -131,7 +131,7 @@
 - type: tile
   id: FloorGlassUran
   name: tiles-glass-uran-floor
-  sprite: /Textures/Imperial/Tiles/glassUran.png
+  sprite: /Textures/Tiles/Imperial/glassUran.png
   variants: 4
   placementVariants: [0, 1, 2, 3]
   baseTurf: Plating
@@ -145,7 +145,7 @@
 - type: tile
   id: FloorGlassPlasma
   name: tiles-glass-plasma-floor
-  sprite: /Textures/Imperial/Tiles/glassPlasma.png
+  sprite: /Textures/Tiles/Imperial/glassPlasma.png
   variants: 4
   placementVariants: [0, 1, 2, 3]
   baseTurf: Plating
@@ -159,7 +159,7 @@
 - type: tile
   id: FloorRGlassUran
   name: tiles-glass-ruran-floor
-  sprite: /Textures/Imperial/Tiles/rglassUran.png
+  sprite: /Textures/Tiles/Imperial/rglassUran.png
   variants: 4
   placementVariants: [0, 1, 2, 3]
   baseTurf: Plating
@@ -173,7 +173,7 @@
 - type: tile
   id: FloorRGlassPlasma
   name: tiles-glass-rplasma-floor
-  sprite: /Textures/Imperial/Tiles/rglassPlasma.png
+  sprite: /Textures/Tiles/Imperial/rglassPlasma.png
   variants: 4
   placementVariants: [0, 1, 2, 3]
   baseTurf: Plating
@@ -196,9 +196,208 @@
   footstepSounds:
     collection: FootstepTile
   itemDrop: SnowballIce
-  
   friction: 0.05
   mobFriction: 0.5
   mobFrictionNoInput: 0.05
   mobAcceleration: 2
+  heatCapacity: 10000
+
+- type: tile
+  id: FloorCrossWood
+  name: tiles-cross-wood
+  sprite: /Textures/Tiles/Imperial/crosswood.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+
+- type: tile
+  id: FloorCrossWoodBroken
+  name: tiles-cross-wood-broken
+  sprite: /Textures/Tiles/Imperial/crosswood_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+
+- type: tile
+  id: FloorDarkWood
+  name: tiles-dark-wood
+  sprite: /Textures/Tiles/Imperial/darkwood.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+  
+- type: tile
+  id: FloorDarkWoodBroken
+  name: tiles-dark-wood-broken
+  sprite: /Textures/Tiles/Imperial/darkwood_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+
+- type: tile
+  id: FloorLargeWood
+  name: tiles-large-wood
+  sprite: /Textures/Tiles/Imperial/largewood.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+  
+- type: tile
+  id: FloorLargeWoodBroken
+  name: tiles-large-wood-broken
+  sprite: /Textures/Tiles/Imperial/largewood_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+
+- type: tile
+  id: FloorLongWood
+  name: tiles-long-wood
+  sprite: /Textures/Tiles/Imperial/longwood.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+    
+- type: tile
+  id: FloorLongWoodBroken
+  name: tiles-long-wood-broken
+  sprite: /Textures/Tiles/Imperial/longwood_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+  
+- type: tile
+  id: FloorWoodenTile
+  name: tiles-wooden-tile
+  sprite: /Textures/Tiles/Imperial/woodentile.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
+  heatCapacity: 10000
+
+- type: tile
+  id: FloorWoodenTileBroken
+  name: tiles-wooden-tile-broken
+  sprite: /Textures/Tiles/Imperial/woodentile_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  baseTurf: Plating
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  barestepSounds:
+    collection: BarestepWood
+  itemDrop: MaterialWoodPlank1
   heatCapacity: 10000
