SabotageBorg and SyndicateMedicalBorg

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -496,6 +496,9 @@
       cell_slot:
         name: power-cell-slot-component-slot-name-default
         startingItem: PowerCellHyper
+  - type: Mimicry ## Imperial Space Маскировка под обычного борга
+  - type: PointLight
+    color: "#FFFFFFFF"
 
 - type: entity
   id: PlayerBorgSyndicateSaboteurGhostRole
