--- a/Resources/Prototypes/borg_types.yml
+++ b/Resources/Prototypes/borg_types.yml
@@ -118,7 +118,7 @@
   defaultModules:
   - BorgModuleLightReplacer
 #  - BorgModuleCleaning
-  - BorgModuleAdvancedCleaning # Ребаланс боргов под Imperial Space
+  - BorgModuleAdvancedCleaning # Ребаланс боргов под Imperial Space. Добавлена новая швабра
 
   radioChannels:
   - Science
