--- a/Resources/Prototypes/Imperial/Roles/Jobs/Synthetics/ImperialBorgModules.yml
+++ b/Resources/Prototypes/Imperial/Roles/Jobs/Synthetics/ImperialBorgModules.yml
@@ -2,7 +2,7 @@
 - type: entity
   parent: AdvMopItem
   name: borg mop
-  id: BorgMopItem
+  id: BorgMopItem ## Швабра борга уборщика от Imperial Space
   description: Motorized mop that has a bigger reservoir and quickly replaces reagents inside with water. Automatic Clown Countermeasure not included.
   components:
     - type: Sprite
@@ -26,8 +26,8 @@
           maxVol: 200
 
 - type: entity
-  name: borg trash bag
-  id: TrashBagBorg
+  name: borg trash bag 
+  id: TrashBagBorg # Мусорный пакет повышенной емкости для борга уборщика
   parent: TrashBag
   components:
   - type: Sprite
@@ -49,7 +49,7 @@
 
 # Предметы медицинского борга
 - type: entity
-  name: borg hypospray
+  name: borg hypospray # Кастомный гипоспрей медицинского борга
   parent: BaseItem
   description: A sterile injector for rapid administration of drugs to patients.
   id: HyposprayBorg
@@ -104,7 +104,7 @@
   id: ChangeReagent
   name: action-name-change-reagent
   description: action-description-change-reagent
-  abstract: true
+  noSpawn: true
   components:
   - type: InstantAction
     itemIconStyle: NoItem
@@ -113,3 +113,123 @@
       state: borghypo
     event: !type:ChangeReagentAction
     useDelay: 1
+
+## Медицинский киборг синдиката
+- type: entity
+  id: PlayerBorgSyndicateMedicalBattery
+  parent: BorgChassisSyndicateMedical
+  suffix: Battery, Module, Operative
+  components:
+  - type: NukeOperative
+  - type: ContainerFill
+    containers:
+      borg_brain:
+        - PositronicBrain
+      borg_module:
+        - BorgModuleTreatment
+        - BorgModuleDefibrillator
+        - BorgModuleAdvancedTreatmentSyndicate 
+  - type: ItemSlots
+    slots:
+      cell_slot:
+        name: power-cell-slot-component-slot-name-default
+        startingItem: PowerCellHyper
+
+- type: entity
+  id: PlayerBorgSyndicateMedicalGhostRole
+  parent: PlayerBorgSyndicateMedicalBattery
+  suffix: Ghost role
+  components:
+    - type: GhostRole
+      name: ghost-role-information-syndicate-cyborg-medical-name
+      description: ghost-role-information-syndicate-medical-description
+      rules: ghost-role-information-silicon-rules
+      raffle:
+        settings: default
+    - type: GhostTakeoverAvailable
+
+
+- type: entity
+  name: syndi borg hypospray ## Гипоспрей борга синдиката
+  parent: HyposprayBorg
+  description: Using reverse engineered designs from NT, Cybersun produced these in limited quantities for Gorlex Marauder operatives.
+  id: SyndiHypoBorg
+  components:
+  - type: Sprite
+    sprite: Objects/Specific/Medical/hypospray.rsi
+    state: borghypo_s
+  - type: Item
+    sprite: Objects/Specific/Medical/hypospray.rsi
+  - type: SolutionContainerManager
+    solutions:
+      hypospray:
+        maxVol: 20
+  - type: RefillableSolution
+    solution: hypospray
+  - type: ExaminableSolution
+    solution: hypospray
+  - type: Hypospray
+    onlyAffectsMobs: false
+  - type: UseDelay
+    delay: 0.5
+  - type: BorgHypo
+    Solutions:
+      - reagents:
+        - ReagentId: Bicaridine
+          Quantity: 2
+      - reagents:
+        - ReagentId: Dermaline
+          Quantity: 2
+      - reagents:
+        - ReagentId: Dexalin
+          Quantity: 2
+      - reagents:
+        - ReagentId: Inaprovaline
+          Quantity: 2
+      - reagents:
+        - ReagentId: Hyronalin
+          Quantity: 2
+      - reagents:
+        - ReagentId: Dylovene
+          Quantity: 2
+  - type: SolutionRegeneration
+    solution: hypospray
+    generated:
+      reagents:
+        - ReagentId: Epinephrine
+          Quantity: 1
+
+- type: entity
+  id: BorgModuleAdvancedTreatmentSyndicate
+  parent: [ BaseBorgModuleMedical, BaseProviderBorgModule ]
+  name: advanced treatment cyborg module
+  components:
+  - type: Sprite
+    layers:
+    - state: syndicate
+    - state: icon-chemist
+  - type: ItemBorgModule
+    items:
+    - HandheldHealthAnalyzerUnpowered
+#    - Beaker  Imperial Space Удалено в связи с ребалансом медицинского борга
+#    - Beaker
+#    - BorgDropper
+#    - BorgHypo
+    - SyndiHypoBorg # Imperial Space Наш кастомный гипоспрей боргов
+  - type: BorgModuleIcon
+    icon: { sprite: Interface/Actions/actions_borg.rsi, state: adv-diagnosis-module }
+
+## Борг саботер
+- type: entity
+  id: Mimicry
+  name: action-name-mimicry
+  description: action-description-mimicry
+  noSpawn: true
+  components:
+  - type: InstantAction
+    itemIconStyle: NoItem
+    icon:
+      sprite: Imperial/Interface/Actions/borgs_imperial.rsi
+      state: mimicry
+    event: !type:MimicryEvent
+    useDelay: 4
