--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -785,6 +785,7 @@
       - WeaponLaserCannon
       - WeaponLaserCarbine
       - WeaponXrayCannon
+      - BorgModuleLethalSecurityRecipe # Imperial Модуль летального оружия СБ борга
   - type: MaterialStorage
     whitelist:
       tags:
