whitelist printerDoc changed

--- a/Resources/Prototypes/Imperial/DocumentPrinter/printer.yml
+++ b/Resources/Prototypes/Imperial/DocumentPrinter/printer.yml
@@ -81,7 +81,5 @@
         - DivorceCertificateRecipe
     - type: MaterialStorage
       whitelist:
-        tags:
+        components:
           - Paper
-      storage:
-        Paper: 0
