--- a/Resources/Prototypes/Imperial/DocumentPrinter/documents.yml
+++ b/Resources/Prototypes/Imperial/DocumentPrinter/documents.yml
@@ -2,6 +2,7 @@
   parent: Paper
   id: ReportOnTheStationSituation
   name: "Отчёт о ситуации на станции"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-report-on-the-station-situation
@@ -10,6 +11,7 @@
   parent: Paper
   id: RequestForAppointmentOfActingCaptain
   name: "Запрос о назначении ВрИО Капитана"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-request-for-appointment-captain
@@ -18,6 +20,7 @@
   parent: Paper
   id: RequestForAppointmentOfActingHeadOfDepartment
   name: "Запрос о назначении ВрИО Главы отдела"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-request-for-appointment-head
@@ -26,6 +29,7 @@
   parent: Paper
   id: ReportGoalAchievement
   name: "Отчет о выполнении цели"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-report-goal-achievement
@@ -34,6 +38,7 @@
   parent: Paper
   id: ApplicationForDismissHead
   name: "Заявление об увольнении главы отдела"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-application-for-dismiss-head
@@ -41,6 +46,7 @@
 - type: entity
   parent: Paper
   id: ApplicationForPassengerEmployment
+  description: "Распечатанный документ с заголовком отдела: командование"
   name: "Заявление о трудоустройстве пассажира"
   components:
     - type: Paper
@@ -50,6 +56,7 @@
   parent: Paper
   id: ApplicationForPositionChange
   name: "Заявление о смене должности"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-application-for-position-change
@@ -58,6 +65,7 @@
   parent: Paper
   id: AccessIncreaseOrder
   name: "Ордер на повышение доступа"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-access-increase-order
@@ -66,6 +74,7 @@
   parent: Paper
   id: AccessDeniedOrder
   name: "Приказ о лишении доступа"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-access-denied-order
@@ -75,6 +84,7 @@
   parent: Paper
   id: CertificationOfQualificationUpgrade
   name: "Сертификат о повышении квалификации"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-certification-of-qualification
@@ -83,6 +93,7 @@
   parent: Paper
   id: DismissalOrder
   name: "Приказ об увольнении"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-dismissal-order
@@ -91,6 +102,7 @@
   parent: Paper
   id: RequestForERT
   name: "Запрос на вызов ОБР"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-request-ert
@@ -99,6 +111,7 @@
   parent: Paper
   id: RequestForCBURN
   name: "Запрос на вызов РХБЗЗ"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-request-cburn
@@ -107,6 +120,7 @@
   parent: Paper
   id: RequestForCentCom
   name: "Запрос на вызов пЦК"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-request-for-centcom
@@ -115,6 +129,7 @@
   parent: Paper
   id: RequestForBonus
   name: "Запрос на выдачу премии"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-request-for-bonus
@@ -123,6 +138,7 @@
   parent: Paper
   id: ApplicationForIDCard
   name: "Заявление на получение ID карты"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-application-for-idcard
@@ -131,6 +147,7 @@
   parent: Paper
   id: ApplicationForPDA
   name: "Заявление на получение КПК"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-application-for-pda
@@ -139,6 +156,7 @@
   parent: Paper
   id: PermissionToCarryEquipment
   name: "Разрешение на ношение снаряжения"
+  description: "Распечатанный документ с заголовком отдела: командование"
   components:
     - type: Paper
       content: doc-text-printer-permission-to-carry-equipment
@@ -147,6 +165,7 @@
   parent: Paper
   id: CrewSRPViolationReport
   name: "Заявление о нарушении СРП членом экипажа"
+  description: "Распечатанный документ с заголовком отдела: юридический департамент"
   components:
     - type: Paper
       content: doc-text-printer-crew-srp-violation-report
@@ -155,6 +174,7 @@
   parent: Paper
   id: ParoleRequestForPrisoner
   name: "Запрос на УДО для заключенного"
+  description: "Распечатанный документ с заголовком отдела: юридический департамент"
   components:
     - type: Paper
       content: doc-text-printer-parole-request-for-prisoner
@@ -163,6 +183,7 @@
   parent: Paper
   id: InternalAffairsAgentReport
   name: "Отчёт Агента Внутренних Дел"
+  description: "Распечатанный документ с заголовком отдела: юридический департамент"
   components:
     - type: Paper
       content: doc-text-printer-iaa-report
@@ -171,6 +192,7 @@
   parent: Paper
   id: Complaint
   name: "Жалоба"
+  description: "Распечатанный документ с заголовком отдела: юридический департамент"
   components:
     - type: Paper
       content: doc-text-printer-complaint
@@ -179,6 +201,7 @@
   parent: Paper
   id: InterrogationReport
   name: "Отчёт о допросе"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-interrogation-report
@@ -187,6 +210,7 @@
   parent: Paper
   id: VoluntaryConfession
   name: "Явка с повинной"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-voluntary-confession
@@ -195,6 +219,7 @@
   parent: Paper
   id: DutyOrder
   name: "Приказ о дежурствах"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-DutyOrder
@@ -203,6 +228,7 @@
   parent: Paper
   id: FinalExamReport
   name: "Отчёт о проведении итогового зачёта"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-final-exam-report
@@ -211,6 +237,7 @@
   parent: Paper
   id: JudicialProceeding
   name: "Судебное производство"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-judicial-proceeding
@@ -219,6 +246,7 @@
   parent: Paper
   id: SearchOrder
   name: "Постановление о розыске"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-search-order
@@ -227,6 +255,7 @@
   parent: Paper
   id: WeaponCarryingPermit
   name: "Разрешение на ношение оружия"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-weapon-carrying-permit
@@ -235,6 +264,7 @@
   parent: Paper
   id: TrackerImplantInstallationOrder
   name: "Постановление об установке импланта Трекер"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-tracker-implant-installation-order
@@ -243,6 +273,7 @@
   parent: Paper
   id: EliminationOrder
   name: "Приказ о ликвидации"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-elimination-order
@@ -251,6 +282,7 @@
   parent: Paper
   id: ArrestWarrant
   name: "Ордер на арест"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-arrest-warrant
@@ -259,6 +291,7 @@
   parent: Paper
   id: SearchWarrant
   name: "Ордер на обыск"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-search-warrant
@@ -267,6 +300,7 @@
   parent: Paper
   id: InvestigationReport
   name: "Отчет о расследовании"
+  description: "Распечатанный документ с заголовком отдела: служба безопасности"
   components:
     - type: Paper
       content: doc-text-printer-investigation-report
@@ -275,6 +309,7 @@
   parent: Paper
   id: ChemicalOrder
   name: "Заказ на химические вещества"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-chemical-order
@@ -283,6 +318,7 @@
   parent: Paper
   id: DischargeSummary
   name: "Выписной эпикриз"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-discharge-summary
@@ -291,6 +327,7 @@
   parent: Paper
   id: RequestForPharmaceuticalProduction
   name: "Запрос на производство лекарственных препаратов"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-request-for-pharmaceutical-production
@@ -299,6 +336,7 @@
   parent: Paper
   id: DeathCertificate
   name: "Свидетельство о смерти"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-death-certificate
@@ -307,6 +345,7 @@
   parent: Paper
   id: PsychologicalHealthConclusion
   name: "Заключение о психологическом здоровье"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-psychological-health-conclusion
@@ -315,6 +354,7 @@
   parent: Paper
   id: MedicalPrescription
   name: "Лекарственный рецепт"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-medical-prescription
@@ -323,6 +363,7 @@
   parent: Paper
   id: EuthanasiaRequest
   name: "Запрос на проведение эвтаназии"
+  description: "Распечатанный документ с заголовком отдела: медицинский отдел"
   components:
     - type: Paper
       content: doc-text-printer-euthanasia-request
@@ -331,6 +372,7 @@
   parent: Paper
   id: BuildingPermit
   name: "Разрешение на строительство"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-building-permit
@@ -339,6 +381,7 @@
   parent: Paper
   id: ApplicationForConstructionWork
   name: "Заявление на проведение строительных работ"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-application-for-construction-work
@@ -347,6 +390,7 @@
   parent: Paper
   id: RepairWorkRequest
   name: "Запрос на проведение ремонтных работ"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-repair-work-request
@@ -355,6 +399,7 @@
   parent: Paper
   id: PrintedDocumentReportStation
   name: "Утверждённый чертёж цели"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-approved-goal-blueprint
@@ -363,6 +408,7 @@
   parent: Paper
   id: ApprovedGoalBlueprint
   name: "Отчет о проведении технических работ"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-technical-work-report
@@ -371,6 +417,7 @@
   parent: Paper
   id: PowerSystemReport
   name: "Отчет о работе системы электроснабжения"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-power-system-report
@@ -379,6 +426,7 @@
   parent: Paper
   id: AtmosSystemReport
   name: "Отчет о работе системы АТМОС"
+  description: "Распечатанный документ с заголовком отдела: инженерный отдел"
   components:
     - type: Paper
       content: doc-text-printer-atmos-system-report
@@ -387,6 +435,7 @@
   parent: Paper
   id: CreatureSapienceRecognition
   name: "Признание разумности существа"
+  description: "Распечатанный документ с заголовком отдела: научный отдел"
   components:
     - type: Paper
       content: doc-text-printer-creature-sapience-recognition
@@ -395,6 +444,7 @@
   parent: Paper
   id: SubjectStudyReport
   name: "Отчет об изучении предмета"
+  description: "Распечатанный документ с заголовком отдела: научный отдел"
   components:
     - type: Paper
       content: doc-text-printer-subject-study-report
@@ -403,6 +453,7 @@
   parent: Paper
   id: ArtifactReport
   name: "Отчёт об артефакте"
+  description: "Распечатанный документ с заголовком отдела: научный отдел"
   components:
     - type: Paper
       content: doc-text-printer-artifact-report
@@ -411,6 +462,7 @@
   parent: Paper
   id: OrderCreateProduct
   name: "Заказ на производство продукта"
+  description: "Распечатанный документ с заголовком отдела: научный отдел"
   components:
     - type: Paper
       content: doc-text-printer-order-create-product
@@ -419,6 +471,7 @@
   parent: Paper
   id: Order
   name: "Заказ"
+  description: "Распечатанный документ с заголовком отдела: отдел снабжения"
   components:
     - type: Paper
       content: doc-text-printer-order
@@ -427,6 +480,7 @@
   parent: Paper
   id: WeaponOrder
   name: "Заказ оружия"
+  description: "Распечатанный документ с заголовком отдела: отдел снабжения"
   components:
     - type: Paper
       content: doc-text-printer-weapon-order
@@ -435,6 +489,7 @@
   parent: Paper
   id: DangerousSkillsTrainingRequest
   name: "Запрос на обучение потенциально опасным навыкам"
+  description: "Распечатанный документ с заголовком отдела: сервисный отдел"
   components:
     - type: Paper
       content: doc-text-printer-dangerous-skills-training-request
@@ -443,6 +498,7 @@
   parent: Paper
   id: MarriageCertificate
   name: "Свидетельство о заключении брака"
+  description: "Распечатанный документ с заголовком отдела: сервисный отдел"
   components:
     - type: Paper
       content: doc-text-printer-marriage-certificate
@@ -451,6 +507,7 @@
   parent: Paper
   id: DivorceCertificate
   name: "Свидетельство о расторжении брака"
+  description: "Распечатанный документ с заголовком отдела: сервисный отдел"
   components:
     - type: Paper
       content: doc-text-printer-divorce-certificate
