--- a/Resources/Prototypes/Imperial/DocumentPrinter/printer.yml
+++ b/Resources/Prototypes/Imperial/DocumentPrinter/printer.yml
@@ -5,7 +5,7 @@
   description: Bureaucratic perfection. Stores a database of all Nanotrasen documents, and lets you print them as long as you have paper.
   components:
     - type: Sprite
-      sprite: Imperial\DocumentPrinter\document_printer.rsi
+      sprite: Imperial/DocumentPrinter/document_printer.rsi
       snapCardinals: true
       layers:
       - state: icon
