--- a/Resources/Prototypes/Maps/reach.yml
+++ b/Resources/Prototypes/Maps/reach.yml
@@ -19,6 +19,7 @@
           availableJobs:
             Captain: [ 1, 1 ]
             HeadOfSecurity: [ 1, 1 ]
+            Adjutant: [ 1, 1 ]
             SecurityOfficer: [ 1, 3 ]
             CargoTechnician: [ 1, 1 ]
             SalvageSpecialist: [ 1, 1 ]
