--- a/Resources/Prototypes/Maps/train.yml
+++ b/Resources/Prototypes/Maps/train.yml
@@ -26,6 +26,7 @@
             Botanist: [ 2, 2 ]
             Chef: [ 1, 1 ]
             Janitor: [ 2, 2 ]
+            Adjutant: [ 1, 1 ]
             Chaplain: [ 1, 1 ]
             Librarian: [ 1, 1 ]
             ServiceWorker: [ 2, 3 ]
