--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/firebot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/firebot.yml
@@ -10,24 +10,24 @@
         icon:
           sprite: Objects/Misc/fire_extinguisher.rsi
           state: fire_extinguisher_open
-        name: fire extinguisher
+        name: огнетушитель
       - tag: FireHelmet
         icon: 
           sprite: Clothing/Head/Helmets/firehelmet.rsi
           state: icon
-        name: fire helmet
+        name: пожарный шлем
         doAfter: 2
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: proximity sensor
+        name: датчик движения
         doAfter: 2
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: borg arm
+        name: рука борга
         doAfter: 2
   - node: bot
     entity: MobFireBot
