--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/helmet_justice.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/helmet_justice.yml
@@ -7,7 +7,7 @@
     - to: helmet
       steps:
       - tag: SecurityHelmet
-        name: security helmet
+        name: шлем охраны
         icon:
           sprite: Clothing/Head/Helmets/security.rsi
           state: icon
@@ -16,7 +16,7 @@
       - material: Glass
         amount: 1
       - tag: LightBulb
-        name: light bulb
+        name: лампочка
         icon:
           sprite: Objects/Power/light_bulb.rsi
           state: normal
