--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/curtains.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/curtains.yml
@@ -19,7 +19,7 @@
           steps:
             - tag: CarpetBlack
               doAfter: 1
-              name: black carpet
+              name: черный ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-black
@@ -29,7 +29,7 @@
           steps:
             - tag: CarpetBlue
               doAfter: 1
-              name: blue carpet
+              name: синий ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-blue
@@ -39,7 +39,7 @@
           steps:
             - tag: CarpetCyan
               doAfter: 1
-              name: cyan carpet
+              name: голубой ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-cyan
@@ -49,7 +49,7 @@
           steps:
             - tag: CarpetGreen
               doAfter: 1
-              name: green carpet
+              name: зеленый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-green
@@ -59,7 +59,7 @@
           steps:
             - tag: CarpetOrange
               doAfter: 1
-              name: orange carpet
+              name: оранжевый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-orange
@@ -69,7 +69,7 @@
           steps:
             - tag: CarpetPink
               doAfter: 1
-              name: pink carpet
+              name: розовый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-pink
@@ -79,7 +79,7 @@
           steps:
             - tag: CarpetPurple
               doAfter: 1
-              name: purple carpet
+              name: фиолетовый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-purple
@@ -89,7 +89,7 @@
           steps:
             - tag: CarpetRed
               doAfter: 1
-              name: red carpet
+              name: красный ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-red
@@ -99,7 +99,7 @@
           steps:
             - tag: CarpetWhite
               doAfter: 1
-              name: white carpet
+              name: белый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-white
