--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/ritualseat.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/ritualseat.yml
@@ -33,7 +33,7 @@
             icon:
               sprite: Mobs/Species/Human/parts.rsi
               state: "head_m"
-            name: human head
+            name: человеческая голова
             doAfter: 1
 
     - node: chairCursed
