--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/tables.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/tables.yml
@@ -233,7 +233,7 @@
         - to: TableFancyBlack
           steps:
             - tag: CarpetBlack
-              name: black carpet
+              name: черный ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-black
@@ -241,7 +241,7 @@
         - to: TableFancyBlue
           steps:
             - tag: CarpetBlue
-              name: blue carpet
+              name: синий ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-blue
@@ -249,7 +249,7 @@
         - to: TableFancyCyan
           steps:
             - tag: CarpetCyan
-              name: cyan carpet
+              name: голубой ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-cyan
@@ -257,7 +257,7 @@
         - to: TableFancyGreen
           steps:
             - tag: CarpetGreen
-              name: green carpet
+              name: зеленый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-green
@@ -265,7 +265,7 @@
         - to: TableFancyOrange
           steps:
             - tag: CarpetOrange
-              name: orange carpet
+              name: оранжевый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-orange
@@ -273,7 +273,7 @@
         - to: TableFancyPurple
           steps:
             - tag: CarpetPurple
-              name: purple carpet
+              name: фиолетовый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-purple
@@ -281,7 +281,7 @@
         - to: TableFancyPink
           steps:
             - tag: CarpetPink
-              name: pink carpet
+              name: розовый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-pink
@@ -289,7 +289,7 @@
         - to: TableFancyRed
           steps:
             - tag: CarpetRed
-              name: red carpet
+              name: красный ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-red
@@ -297,7 +297,7 @@
         - to: TableFancyWhite
           steps:
             - tag: CarpetWhite
-              name: white carpet
+              name: белый ковер
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-white
