--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_telemonitors.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_telemonitors.yml
@@ -38,7 +38,7 @@
             - tool: Screwing
               doAfter: 2
             - tag: SurveillanceCameraMonitorCircuitboard
-              name: surveillance camera monitor board
+              name: машинная плата монитора камер наблюдения 
               icon:
                 sprite: Objects/Misc/module.rsi
                 state: cpuboard
@@ -127,7 +127,7 @@
             - tool: Screwing
               doAfter: 2
             - tag: ComputerTelevisionCircuitboard
-              name: television board
+              name: машинная плата телевизора
               icon:
                 sprite: Objects/Misc/module.rsi
                 state: cpuboard
