--- a/Resources/Prototypes/Recipes/Construction/Graphs/weapons/bladed_hats.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/weapons/bladed_hats.yml
@@ -7,13 +7,13 @@
     - to: icon
       steps:
       - tag: GlassShard
-        name: a glass shard
+        name: осколок стекла
         icon:
           sprite: Objects/Materials/Shards/shard.rsi
           state: shard1
         doAfter: 1
       - tag: BrimFlatcapGrey
-        name: a grey flatcap
+        name: серая кепка
         icon:
           sprite: Clothing/Head/Hats/greyflatcap.rsi
           state: icon
@@ -29,13 +29,13 @@
     - to: icon
       steps:
       - tag: GlassShard
-        name: a glass shard
+        name: осколок стекла
         icon:
           sprite: Objects/Materials/Shards/shard.rsi
           state: shard1
         doAfter: 1
       - tag: BrimFlatcapBrown
-        name: a brown flatcap
+        name: коричневая кепка
         icon:
           sprite: Clothing/Head/Hats/brownflatcap.rsi
           state: icon
