--- a/Resources/Prototypes/Recipes/Construction/Graphs/weapons/spear.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/weapons/spear.yml
@@ -13,7 +13,7 @@
               amount: 3
               doAfter: 1
             - tag: GlassShard
-              name: glass shard
+              name: осколок стекла
               icon:
                 sprite: Objects/Materials/Shards/shard.rsi
                 state: shard1
@@ -36,7 +36,7 @@
               amount: 3
               doAfter: 1
             - tag: ReinforcedGlassShard
-              name: reinforced glass shard
+              name: осколок бронестекла
               icon:
                 sprite: Objects/Materials/Shards/shard.rsi
                 state: shard1
@@ -59,7 +59,7 @@
               amount: 3
               doAfter: 1
             - tag: PlasmaGlassShard
-              name: plasma glass shard
+              name: осколок плазменного стекла
               icon:
                 sprite: Objects/Materials/Shards/shard.rsi
                 state: shard1
@@ -82,7 +82,7 @@
               amount: 3
               doAfter: 1
             - tag: UraniumGlassShard
-              name: uranium glass shard
+              name: осколок уранового стекла
               icon:
                 sprite: Objects/Materials/Shards/shard.rsi
                 state: shard1
