--- a/Resources/Prototypes/Recipes/Construction/storage.yml
+++ b/Resources/Prototypes/Recipes/Construction/storage.yml
@@ -1,8 +1,8 @@
 #bureaucracy
 - type: construction
   id: FilingCabinet
-  name: filing cabinet
-  description: A cabinet for all your filing needs.
+  name: Картотечный шкаф
+  description: Шкаф для хранения документов.
   graph: FilingCabinet
   startNode: start
   targetNode: filingCabinet
@@ -18,8 +18,8 @@
 
 - type: construction
   id: TallCabinet
-  name: tall cabinet
-  description: A cabinet for all your filing needs.
+  name: Высокий шкаф
+  description: Шкаф для хранения документов.
   graph: FilingCabinet
   startNode: start
   targetNode: tallCabinet
@@ -35,8 +35,8 @@
 
 - type: construction
   id: ChestDrawer
-  name: chest drawer
-  description: A small drawer for all your filing needs, Now with wheels!
+  name: Комод
+  description: Маленький шкафчик для хранения придметов. Теперь на колесиках!
   graph: FilingCabinet
   startNode: start
   targetNode: chestDrawer
@@ -53,8 +53,8 @@
 # ItemCabinets
 - type: construction
   id: ShowCase
-  name: showcase
-  description: A sturdy showcase for an expensive exhibit.
+  name: Витрина
+  description: Прочная витрина для дорогого экспоната.
   graph: GlassBox
   startNode: start
   targetNode: glassBox
@@ -72,8 +72,8 @@
 # Normals
 - type: construction
   id: ShelfWood
-  name: wooden shelf
-  description: A convenient place to place, well, anything really.
+  name: Деревянная полка
+  description: Удобное место для размещения чего-либо.
   graph: Shelf
   startNode: start
   targetNode: ShelfWood
@@ -88,8 +88,8 @@
 
 - type: construction
   id: ShelfMetal
-  name: metal shelf
-  description: A sturdy place to place, well, anything really.
+  name: Металлическая полка
+  description: Удобное место для размещения чего-либо.
   graph: Shelf
   startNode: start
   targetNode: ShelfMetal
@@ -104,8 +104,8 @@
 
 - type: construction
   id: ShelfGlass
-  name: glass shelf
-  description: Just like a normal shelf! But fragile and without the walls!
+  name: Стеклянная полка
+  description: Как обычная полка! Но хрупкая и без стенок.
   graph: Shelf
   startNode: start
   targetNode: ShelfGlass
@@ -121,8 +121,8 @@
 # Reinforced
 - type: construction
   id: ShelfRWood
-  name: sturdy wooden shelf
-  description: The perfect place to store all your vintage records.
+  name: Прочная деревянная полка
+  description: Идеальное место для хранения всех ваших старинных пластинок.
   graph: Shelf
   startNode: start
   targetNode: ShelfRWood
@@ -137,8 +137,8 @@
 
 - type: construction
   id: ShelfRMetal
-  name: sturdy metal shelf
-  description: Nice and strong, and keeps your maints loot secure.
+  name: Прочная металлическая полка
+  description: Красивая и прочная, сохранит вашу добычу.
   graph: Shelf
   startNode: start
   targetNode: ShelfRMetal
@@ -153,8 +153,8 @@
 
 - type: construction
   id: ShelfRGlass
-  name: sturdy glass shelf
-  description: See through, decent strength, shiny plastic case. Whats not to love?
+  name: Прочная стеклянная полка
+  description: Прозрачная, прочная полка с  блестящим пластиковым корпусом. Почему её не любят?
   graph: Shelf
   startNode: start
   targetNode: ShelfRGlass
@@ -170,8 +170,8 @@
 # Departmental
 - type: construction
   id: ShelfBar
-  name: bar shelf
-  description: A convenient place for all your extra booze, specifically designed to hold more bottles!
+  name: Барная полка
+  description: Удобное место для всей вашей дополнительной выпивки, специально предназначенное для хранения большего количества бутылок!
   graph: Shelf
   startNode: start
   targetNode: ShelfBar
@@ -186,8 +186,8 @@
 
 - type: construction
   id: ShelfKitchen
-  name: kitchen shelf
-  description: Holds your knifes, spice, and everything nice!
+  name: Кулинарная полка
+  description: Вмещает ваши ножи, специи и все остальное!
   graph: Shelf
   startNode: start
   targetNode: ShelfKitchen
@@ -202,8 +202,8 @@
 
 - type: construction
   id: ShelfChemistry
-  name: chemical shelf
-  description: Perfect for keeping the most important chemicals safe, and out of the clumsy clowns hands!
+  name: Химическая полка
+  description: Идеально подходит для защиты самых важных химикатов от неуклюжих рук клоуна!
   graph: Shelf
   startNode: start
   targetNode: ShelfChemistry
