--- a/Resources/Prototypes/Recipes/Crafting/bots.yml
+++ b/Resources/Prototypes/Recipes/Crafting/bots.yml
@@ -1,90 +1,90 @@
 - type: construction
-  name: cleanbot
+  name: Чистобот
   id: cleanbot
   graph: CleanBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This bot wanders around the station, mopping up any puddles it sees.
+  description: Ужас автоматизации угрожает и космическим уборщикам.
   icon:
     sprite: Mobs/Silicon/Bots/cleanbot.rsi
     state: cleanbot
 
 - type: construction
-  name: firebot
+  name: Пожарбот
   id: firebot
   graph: FireBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This bot puts out fires wherever it goes.
+  description: Этот бот тушит пожары, где бы они ни находились.
   icon:
     sprite: Mobs/Silicon/Bots/firebot.rsi
     state: firebot
 
 - type: construction
-  name: honkbot
+  name: Хонкобот
   id: honkbot
   graph: HonkBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This bot honks and slips people.
+  description: Этот бот смеётся и подскальзывает людей.
   icon:
     sprite: Mobs/Silicon/Bots/honkbot.rsi
     state: honkbot
 
 - type: construction
-  name: jonkbot
+  name: Кринжбот
   id: jonkbot
   graph: JonkBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This cursed bot honks, laughs and slips people.
+  description: Этот проклятый бот сигналит, смеется и подскальзывает людей.
   icon:
     sprite: Mobs/Silicon/Bots/honkbot.rsi
     state: jonkbot
 
 - type: construction
-  name: medibot
+  name: Медибот
   id: medibot
   graph: MediBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This bot can help supply basic healing.
+  description: Не заменит врача, но лучше, чем ничего.
   icon:
     sprite: Mobs/Silicon/Bots/medibot.rsi
     state: medibot
 
 - type: construction
-  name: mimebot
+  name: Мимбот
   id: mimebot
   graph: MimeBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This bot knows how to wave.
+  description: Почему бы не помахать мимботу?
   icon:
     sprite: Mobs/Silicon/Bots/mimebot.rsi
     state: mimebot
 
 - type: construction
-  name: supplybot
+  name: Каргобот
   id: supplybot
   graph: SupplyBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: This bot can be loaded with cargo to make deliveries.
+  description: Космические грузчики повторяют судьбу уборщиков.
   icon:
     sprite: Mobs/Silicon/Bots/supplybot.rsi
     state: supplybot
