--- a/Resources/Prototypes/Recipes/Crafting/crates.yml
+++ b/Resources/Prototypes/Recipes/Crafting/crates.yml
@@ -1,100 +1,101 @@
 - type: construction
-  name: livestock crate
+  name: Ящик для скота
   id: CrateLivestock
   graph: CrateLivestock
   startNode: start
   targetNode: cratelivestock
   category: construction-category-storage
-  description: A wooden crate for holding livestock.
+  description: Деревянный ящик для содержания скота.
   icon: { sprite: Structures/Storage/Crates/livestock.rsi, state: base }
   objectType: Structure
 
 - type: construction
-  name: steel crate
+  name: Стальной ящик
   id: CrateGenericSteel
   graph: CrateGenericSteel
   startNode: start
   targetNode: crategenericsteel
   category: construction-category-storage
-  description: A metal crate for storing things.
+  description: Металлический ящик для хранения вещей.
   icon: { sprite: Structures/Storage/Crates/generic.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: secure crate
+  name: Защищённый ящик
   id: CrateSecure
   graph: CrateSecure
   startNode: start
   targetNode: cratesecure
   category: construction-category-storage
-  description: A secure metal crate for storing things. Requires no special access, can be configured with an Access Configurator.
+  description: Надежный металлический ящик для хранения вещей. Доступ может быть настроен с помощью конфигуратора доступов.
   icon: { sprite: Structures/Storage/Crates/secure.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: freezer
+  name: Холодильник
   id: CrateFreezer
   graph: CrateFreezer
   startNode: start
   targetNode: done
   category: construction-category-storage
-  description: A metal freezing crate for storing things.
+  description: Металлический морозильный ящик для хранения вещей.
   icon: { sprite: Structures/Storage/Crates/freezer.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: plastic crate
+  name: Пластиковый ящик
   id: CratePlastic
   graph: CratePlastic
   startNode: start
   targetNode: crateplastic
   category: construction-category-storage
-  description: A plastic crate for storing things.
+  description: Пластиковый ящик для хранения вещей.
   icon: { sprite: Structures/Storage/Crates/plastic.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: cardboard box
+  name: Картонный ящик
   id: BigBox
   graph: BaseBigBox
   startNode: start
   targetNode: basebigbox
   category: construction-category-storage
-  description: A big box for storing things or hiding in.
+  description: Большой ящик, в котором можно хранить вещи или прятаться.
   icon: { sprite: Structures/Storage/closet.rsi, state: cardboard }
   objectType: Structure
 
 - type: construction
-  name: cardboard box
+  name: Картонная коробка
   id: BoxCardboard
   graph: BoxCardboard
   startNode: start
   targetNode: boxcardboard
   category: construction-category-storage
-  description: A small box for storing things.
+  description: Маленькая коробка для хранения вещей.
   icon: { sprite: Objects/Storage/boxes.rsi, state: box }
   objectType: Item
 
 - type: construction
-  name: pizza box
+  name: Коробка пиццы
   id: FoodBoxPizza
   graph: FoodBoxPizza
   startNode: start
   targetNode: foodboxpizza
   category: construction-category-storage
-  description: A box for pizza.
+  description: Коробка для пиццы.
   icon: 
     sprite: Objects/Consumable/Food/Baked/pizza.rsi
     state: box
   objectType: Item
 
 - type: construction
-  name: coffin
+  name: Гроб
   id: CrateCoffin
   graph: CrateCoffin
   startNode: start
   targetNode: cratecoffin
   category: construction-category-storage
-  description: A coffin for storing corpses.
+  description: Гроб для хранения трупов.
   icon: { sprite: Structures/Storage/Crates/coffin.rsi, state: base }
   objectType: Structure
+  
