--- a/Resources/Prototypes/Stacks/science_stacks.yml
+++ b/Resources/Prototypes/Stacks/science_stacks.yml
@@ -1,23 +1,23 @@
 ﻿- type: stack
   id: ArtifactFragment
-  name: artifact fragment
+  name: фрагмент артефакта
   spawn: ArtifactFragment1
   maxCount: 30
 
 - type: stack
   id: Capacitor
-  name: capacitor
+  name: конденсатор
   spawn: CapacitorStockPart
   maxCount: 10
 
 - type: stack
   id: Manipulator
-  name: micro manipulator
+  name: микро-манипулятор
   spawn: MicroManipulatorStockPart
   maxCount: 10
 
 - type: stack
   id: MatterBin
-  name: matter bin
+  name: емкость материи
   spawn: MatterBinStockPart
   maxCount: 10
