--- a/Resources/Prototypes/Imperial/Roles/Jobs/Synthetics/SecurityCyborg.yml
+++ b/Resources/Prototypes/Imperial/Roles/Jobs/Synthetics/SecurityCyborg.yml
@@ -29,6 +29,7 @@
   - type: ShowJobIcons
   - type: ShowMindShieldIcons
   - type: ShowCriminalRecordIcons
+  - type: FlashImmunity
 
   radioChannels:
   - Security
