fix station goal stamp

--- a/Resources/Prototypes/Entities/Objects/Misc/rubber_stamp.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/rubber_stamp.yml
@@ -52,7 +52,7 @@
 
 - type: entity
   name: CentComm rubber stamp
-  parent: RubberStampBase
+  parent: [RubberStampBase, BaseCentcommContraband]
   id: RubberStampCentcom
   suffix: DO NOT MAP
   components:
